syntax = "proto3";

package mailPackage;

service MailService {
    rpc SendSignupConfirmMail (DefaultMailReq) returns (DefaultMailResponse) {};
    rpc SendResetPasswordMail (DefaultMailReq) returns (DefaultMailResponse) {};
}

message DefaultMailReq {
    string email = 1;
    string token = 2;
}

message DefaultMailResponse {
    bool success = 1;
    string error = 2;
}